<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">


            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Item1"
                android:textColor="@color/textColorPrimary">


            </Button>


            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Item2"
                android:textColor="@color/textColorPrimary">


            </Button>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Item3"
                android:textColor="@color/textColorPrimary">


            </Button>


            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Item4"
                android:textColor="@color/textColorPrimary">


            </Button>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Item5"
                android:textColor="@color/textColorPrimary">


            </Button>

        </LinearLayout>


    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividercolor" />

    <RelativeLayout
        android:id="@+id/Layout_ViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividercolor" />

    <RelativeLayout
        android:id="@+id/Layout_Textviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <TextView
            android:id="@+id/Textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/Textview1"
            android:textColor="@color/primarytext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/Textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Textview2"
            android:textColor="@color/primarytext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"

            />


        <TextView
            android:id="@+id/Textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="@string/Textview3"
            android:textColor="@color/primarytext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividercolor" />

    <RelativeLayout
        android:id="@+id/Layout_Display_Textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Textview_Display_ITemNAme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Noitem"
            android:textColor="@color/primarytext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividercolor" />

    <RelativeLayout
        android:id="@+id/Layout_ColorBtns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent"
            android:text="redBtn"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent"
            android:text="bLueBtn"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent"
            android:text="greenBtn"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary" />


    </RelativeLayout>


</LinearLayout>